[package]
name = "dumpb"
version = "0.1.0"
authors = ["Dima T <mrlocky98@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3.23" }
regex = { version = "1.5.4" }
dirs = { version = "4.0.0" }